--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.403.0",
     "next": "14.2.4",
+    "openai": "^4.54.0",
+    "openai-api": "^1.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
