--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "openai": "^4.55.1",
     "openai-api": "^1.3.1",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "replicate": "^0.32.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
@@ -37,7 +39,9 @@
     "@types/axios": "^0.14.0",
     "@types/node": "^20",
     "@types/react": "^18.3.4",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.3.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
