--- a/.env
+++ b/.env
@@ -8,9 +8,9 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/dashboard
 
 # OPENAI_API_KEY=sk-7oWYMZX9sW2iNwPTxpI6nNp_wzvbpj5-z0gBkQnII7T3BlbkFJGD69h5cSq-Va9Preat5-UED9uJgsV7FtaHj8eHqVoA
 NEXT_PUBLIC_API_GENERATIVE_LANGUAGE_CLIENT=AIzaSyCsS8pUw_9a6gkvQFZ10jMMbtVwzflSr_8
+NEXT_PUBLIC_UNSPLASH_API_KEY=WzAKreZybhiJo-eaQyKwpul8qLcAfWoiwm8DdZlxghg
 
 
 
 REPLICATE_API_TOKEN=r8_HGFUiIz9BUOeWzgAHoTSBJ1gvi1DWgK25pQOp
-
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
