--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.2.12",
     "@google/generative-ai": "^0.17.0",
+    "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -29,6 +30,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-markdown": "^9.0.1",
+    "react-modal": "^3.16.1",
     "react-syntax-highlighter": "^15.5.0",
     "replicate": "^0.32.0",
     "tailwind-merge": "^2.4.0",
@@ -41,6 +43,7 @@
     "@types/react": "^18.3.4",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.3.0",
+    "@types/react-modal": "^3.16.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
