--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "replicate": "^0.32.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
