--- a/.env
+++ b/.env
@@ -8,8 +8,10 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/dashboard
 
 # OPENAI_API_KEY=sk-7oWYMZX9sW2iNwPTxpI6nNp_wzvbpj5-z0gBkQnII7T3BlbkFJGD69h5cSq-Va9Preat5-UED9uJgsV7FtaHj8eHqVoA
 NEXT_PUBLIC_API_GENERATIVE_LANGUAGE_CLIENT=AIzaSyCsS8pUw_9a6gkvQFZ10jMMbtVwzflSr_8
+NEXT_PUBLIC_GEMINI_API_KEY=AIzaSyBL6UbfX3v5myw4oBvZZI1zGoX1nxvUkic
 NEXT_PUBLIC_UNSPLASH_API_KEY=WzAKreZybhiJo-eaQyKwpul8qLcAfWoiwm8DdZlxghg
 NEXT_PUBLIC_API_KEY=SG_e223471534b9e8bd
+
 # MY: SG_4b624bcae71c99b7
 # segmind
 
@@ -17,4 +19,3 @@ NEXT_PUBLIC_API_KEY=SG_e223471534b9e8bd
 
 REPLICATE_API_TOKEN=r8_HGFUiIz9BUOeWzgAHoTSBJ1gvi1DWgK25pQOp
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
-
